--- a/views/Listings/new.ejs
+++ b/views/Listings/new.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-8 offset-2">
             <!-- <h2>Add new Hotel</h2> -->
-            <form method="post" action="/listings" class="needs-validation" novalidate>
+            <form method="post" action="/listings" class="needs-validation" novalidate enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
                     <input type="text" id="title" name="title" class="form-control" placeholder="Add a catchy title"
@@ -19,12 +19,18 @@
                     <div class="invalid-feedback">description is must</div>
                 </div>
 
+                <!-- Image link -->
                 <div class="mb-3">
                     <label for="image" class="form-label">image</label>
                     <input type="text" name="image" id="image" class="form-control"
                         placeholder="Enter your Image url" />
-                    <!-- <div class="valid-feedback">Hope so it is valid image url !!</div> -->
+                </div>
 
+                <!-- upload file -->
+                <div class="mb-3">
+                    <label for="image" class="form-label">image</label>
+                    <input type="file" name="image" id="image" class="form-control"
+                        placeholder="Enter your Image url" />
                 </div>
 
                 <div class="row">
@@ -41,9 +47,9 @@
                         <label for="country" class="form-label">country</label>
                         <input type="text" name="country" class="form-control" id="country" placeholder="India"
                             required />
-                            <div class="valid-feedback">Wow !!</div>
-                            <div class="invalid-feedback">Do you from Antarctica ?</div>
-                        </div>
+                        <div class="valid-feedback">Wow !!</div>
+                        <div class="invalid-feedback">Do you from Antarctica ?</div>
+                    </div>
                 </div>
 
 
@@ -52,7 +58,7 @@
                     <input type="text" name="location" class="form-control" id="location"
                         placeholder="Vadodara , Gujarat" required />
                     <div class="valid-feedback">Wow !!</div>
-                    <div class="invalid-feedback">You'r  hotel is on Moon ?</div>
+                    <div class="invalid-feedback">You'r hotel is on Moon ?</div>
                 </div>
                 <br><br>
 
