--- a/views/Listings/index.ejs
+++ b/views/Listings/index.ejs
@@ -1,26 +1,26 @@
 <% layout('/layouts/boilerplate.ejs') %>
 
-        <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
-            <% for( let listing of allListings) { %>
-                <div class="card listing-card col">
-                        <a href="/listings/<%= listing._id  %>" class="listing-link">
-                        <img src="<%= listing.image  %>" class="card-img-top" alt="Image is processing" />
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <%= listing.title %>
-                            </h5>
-                            <p class="card-text">
-                                &#8377; <%= listing.price.toLocaleString("en-IN") %> <br />
+    <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
+        <% for( let listing of allListings) { %>
+            <div class="card listing-card col">
+                <a href="/listings/<%= listing._id  %>" class="listing-link">
+                    <img src="<%= listing.image.url  %>" class="card-img-top" alt="Image is processing" />
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= listing.title %>
+                        </h5>
+                        <p class="card-text">
+                            &#8377; <%= listing.price.toLocaleString("en-IN") %> <br />
                                 <i class="fa-solid fa-location-dot"></i>
                                 <%= listing.location %>
-                                <br />
-                                <i class="fa-solid fa-globe"></i>
-                                <%= listing.country %> <br />
-                            </p>
-                            
-                        </div>
-                    </a>
-                    </div>
+                                    <br />
+                                    <i class="fa-solid fa-globe"></i>
+                                    <%= listing.country %> <br />
+                        </p>
 
-                <% } %>
+                    </div>
+                </a>
             </div>
+
+            <% } %>
+    </div>
