--- a/views/Listings/show.ejs
+++ b/views/Listings/show.ejs
@@ -7,7 +7,7 @@
         <div class="col-8 offset-2">
 
             <div class="card">
-                <img src="<%= listing.image  %>" class="card-img-top show-img"
+                <img src="<%= listing.image.url  %>" class="card-img-top show-img"
                     alt="Please give your valuable some time to load this image ">
             </div>
 
