--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -16,7 +16,7 @@
           <a class="nav-link bn3637 " href="/login">Log In</a>
           <% } %>
             <% if(currUser) { %>
-              <a class="nav-link " href="/logout">Log out</a>
+              <a class="nav-link bn3637" href="/logout">Log out</a>
               <% } %>
       </div>
     </div>
