--- a/public/css/indexPage.css
+++ b/public/css/indexPage.css
@@ -1,3 +1,43 @@
+
+
+/* Card */
+.card{
+
+    min-width: 300px;
+}
+
+.listing-card {
+    border: none !important;
+    margin-bottom: 2rem;
+}
+
+.card-img-top {
+    border-radius: 1rem ;
+    width: 100% ;
+    height: 300px;
+    
+    object-fit: cover ;
+}
+
+ .listing-link:hover {
+    opacity: 0.8;
+  }
+
+.card-body {
+    padding: 0 ;
+}
+
+.card-text {
+    font-weight: 400 ;
+}
+
+.listing-link {
+    text-decoration: none;
+}
+
+
+
+/* Filters */
 #filters {
     display: flex;
     flex-wrap: wrap;
