--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -9,6 +9,14 @@
       <div class="navbar-nav">
         <a class="nav-link bn3637 bn38" href="/listings">Explore</a>
       </div>
+
+      <div class="navbar-nav ms-auto">
+        <form class="d-flex" role="search">
+          <input class="form-control search-bar me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-red btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+
       <div class="navbar-nav ms-auto">
         <a class="nav-link bn3637 bn38" href="/listings/new">Airbnb your property</a>
         <% if(!currUser) { %>
