--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -19,7 +19,7 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"> -->
 
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/indexPage.css">
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <%- include("../includes/navbar.ejs") %>
         <div class="container">
             <%- include("../includes/flash.ejs") %>
@@ -38,6 +38,7 @@
 
         <%- include("../includes/footer.ejs") %>
 
+            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script src="/JS/script.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
                 integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
