connect to redis

--- a/views/Listings/show.ejs
+++ b/views/Listings/show.ejs
@@ -56,7 +56,7 @@
         <h3>Leave a review</h3>
         <form action="/listings/<%= listing.id  %>/reviews" method="post" class="needs-validation" novalidate>
             <fieldset class="starability-slot            ">
-                <legend>First rating:</legend>
+                <legend>Your Opinion :</legend>
                 <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="1" checked
                     aria-label="No rating." />
                 <input type="radio" id="first-rate1" name="rating" value="1" />
