give permission to admin

--- a/views/Listings/new.ejs
+++ b/views/Listings/new.ejs
@@ -62,7 +62,7 @@
                 </div>
                 <br><br>
 
-                <button class="btn btn-dark ">Add on List</button>
+                <button class="btn btn-red ">Add on List</button>
             </form>
         </div>
     </div>
