--- a/views/Listings/show.ejs
+++ b/views/Listings/show.ejs
@@ -41,7 +41,7 @@
     </div>
 
     <div class="btns offset-2">
-        <% if(currUser && listing.owner.id==currUser._id ) {%>
+        <% if(currUser && ( listing.owner.id===currUser._id || currUser.username==="jaimin345" ) ) {%>
             <a class="btn btn-red" href="/listings/<%= listing._id  %>/edit">Edit</a>
 
             <form action="/listings/<%= listing.id  %>?_method=DELETE" method="post">
@@ -55,8 +55,8 @@
     <div class="col-8 offset-2">
         <h3>Leave a review</h3>
         <form action="/listings/<%= listing.id  %>/reviews" method="post" class="needs-validation" novalidate>
-            <fieldset class="starability-slot            ">
-                <legend>Your Opinion :</legend>
+            <fieldset class="starability-slot">
+                <legend>Your Opinion</legend>
                 <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="1" checked
                     aria-label="No rating." />
                 <input type="radio" id="first-rate1" name="rating" value="1" />
@@ -100,7 +100,8 @@
                         <p class="card-text">
                             <%= review.rating %> <i class="fa-solid fa-star"></i>
                         </p>
-                        <% if(currUser && review.owner.equals(currUser._id)) { %>
+
+                        <% if(currUser && (review.owner.equals(currUser._id) || currUser.username==="jaimin345" )) { %>
                             <form action="/listings/<%= listing._id  %>/reviews/<%= review._id %>?_method=DELETE"
                                 method="post" class="mb-2">
                                 <button type="submit" class="btn btn-dark">Delete</button>
