--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,12 +1,12 @@
 <footer class="mt-5">
     <div class="f-info">
         <div class="f-info-socials">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
-            
+            <a href="https://github.com/JaiminPatel345/wanderlust"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://github.com/JaiminPatel345/wanderlust"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/JaiminPatel345/wanderlust"><i class="fa-brands fa-linkedin-in"></i></a>
+
         </div>
-        <div> &copy; Wanderlust private limited</div>
+        <div> &copy; Wanderlust private limited - Jaimin Detroja</div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
             <a href="/terms">Terms</a>
