--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,7 +125,10 @@ input[type=text]:focus ,
 input[type=password]:focus ,  
 input[type=range]:focus , 
 input[type=email]:focus ,  
-input[type=search]:focus
+input[type=search]:focus,
+input[type=file]:focus,
+input[type=number]:focus,
+textarea#description:focus
 {
   box-shadow: 0 0 4px  #FF496A;
   border: 1px solid #FF496A;
