make only one choice for upload image using swal

--- a/views/Listings/new.ejs
+++ b/views/Listings/new.ejs
@@ -21,15 +21,15 @@
 
                 <!-- Image link -->
                 <div class="mb-3">
-                    <label for="image" class="form-label">image</label>
-                    <input type="text" name="image" id="image" class="form-control"
+                    <label for="urlImage" class="form-label">image</label>
+                    <input type="text" name="image" id="urlImage" class="form-control"
                         placeholder="Enter your Image url" />
                 </div>
 
                 <!-- upload file -->
                 <div class="mb-3">
-                    <label for="image" class="form-label">image</label>
-                    <input type="file" name="image" id="image" class="form-control"
+                    <label for="fileImage" class="form-label">image</label>
+                    <input type="file" name="image" id="fileImage" class="form-control"
                         placeholder="Enter your Image url" />
                 </div>
 
