fix tax switch bug

--- a/views/Listings/index.ejs
+++ b/views/Listings/index.ejs
@@ -72,3 +72,32 @@
             </div>
             <% } %>
     </div>
+
+    <script>
+        //For tax switch 
+        const taxSwitch = document.getElementById("flexSwitchCheckDefault");
+        const taxRate = 0.18; // 18% GST
+
+        taxSwitch.addEventListener("click", () => {
+            const priceElements = document.querySelectorAll('.card-text span[id^="price-"]');
+
+            for (const priceElement of priceElements) {
+                const originalPrice = parseFloat(priceElement.dataset.originalPrice);
+                const taxAmount = originalPrice * taxRate;
+                const displayedPrice = taxSwitch.checked ? (originalPrice + taxAmount).toLocaleString("en-IN") : originalPrice.toLocaleString("en-IN");
+
+                priceElement.textContent = displayedPrice;
+
+            }
+            let taxInfo = document.getElementsByClassName("tax-info");
+            for (info of taxInfo) {
+                if (info.textContent.includes("Including")) {
+                    info.textContent = ` (Excluding GST)`;
+                } else {
+                    info.textContent = ` (Including GST)`;
+                }
+            }
+        });
+
+
+    </script>
