--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -18,7 +18,7 @@
       </div>
 
       <div class="navbar-nav ms-auto">
-        <a class="nav-link bn3637 bn38" href="/listings/new">Airbnb your property</a>
+        <a class="nav-link bn3637 bn38" href="/listings/new">List your property</a>
         <% if(!currUser) { %>
           <a class="nav-link bn3637  " href="/signup">Sign Up</a>
           <a class="nav-link bn3637 " href="/login">Log In</a>
